# Predict-Stock-ML

./: .gitignore  AI_predictions.txt  AI_predictions_20_5.txt  Full_Tabular_View.csv  Full_Tabular_View.txt  PS_Stocks_ML_Clean.py  PS_Stocks_ML_Playground.py  Predict_Stocks_ML.py  README.md  Tabular_view_1.txt  Tabular_view_2.txt  first_attempt.py  for_documentation.py  from_perplexity.py  get_fear-and-greed_index.py  pyproject.toml  readme for documentation.md  temp_predictions.txt  temp_sp500_tabular_view.txt
CSV_Inputs/: Inflation.csv  Interest_Rate.csv  Market_Yield.csv  fear-greed.csv
starter_files/: 001_equal_weight_S&P_500.ipynb  secrets.py
